# PCECDI

./: CMakeLists.txt  CheckSums.h  Constants.h  MainUI.h  README.md  SettingsManager.h  SettingsUI.h  main.cpp
Ressources/: Ressources.qrc  checksums.json  version.rc
Translations/: PCECDI_de.ts  PCECDI_fr.ts  PCECDI_ru.ts
